prevent unexpected overflow

--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@ body {
   text-align: center;
 }
 
+body > * {
+  max-width: 100%;
+}
+
 .excess {
   color: #f44;
 }
